# SWGOH-Guild-Data

./: .dockerignore  Dockerfile  README.md  api_request.py  archive_players.py  check_raid_results.py  csv_import.py  docker-compose.yml  enter_data.py  helper_functions.py  log_gp.py  log_raid_score.py  log_tickets.py  logging_config.json  main.py  push_to_sheets.py  pyproject.toml  pytest.ini  read_data.py  remove_data.py  requirements.txt  roster_checks.py  spreadsheet_operations.py  test_helper_functions.py  update_data.py  update_raid_data.py
.github/workflows/: python-package.yml
csv_import/: tb_data.csv  tb_data_imported_08-09-2025_ScaredOfNuffin.csv
logs/: guild_data_app.log.1  guild_data_app.log.2  guild_data_app.log.3  my_app.log.1  my_app.log.2  my_app.log.3
scripts/: entrypoint.sh  run_check_raid_results.sh  run_log_gp.sh  run_log_raid_score.sh  run_log_tickets.sh  run_manage_members.sh  run_push_to_sheets.sh  run_roster_checks.sh
src/: __init__.py  api_request.py  archive_players.py  check_raid_results.py  csv_import.py  enter_data.py  helper_functions.py  log_gp.py  log_raid_score.py  log_tickets.py  logging_config.json  main.py  manage_members.py  push_to_sheets.py  read_data.py  remove_data.py  roster_checks.py  spreadsheet_operations.py  update_data.py
src/Guild_Data_App.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_enter_data.py  test_helper_functions.py  test_read_data.py  test_smaller_modules.py
