[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Guild_Data_App"
version = "0.2.0"
description = "A project to gather and process data from the game SWGOH for guild spreadsheets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests", "pytest", "psycopg2", "flake8", "black", "mypy", "pytest-cov", "pytest-mock", "python-dotenv", "pandas", "numpy", "gspread"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --maxfail=3 --disable-warnings"
